# The-Flask-Mega-Tutorial

./: .env  .gitignore  Dockerfile  README.md  app.db  babel.cfg  config.py  microblog.py  pyproject.toml  tests.py
app/: __init__.py  cli.py  email.py  forms.py  models.py  routes.py  search.py  tasks.py  translate.py
app/api/: auth.py  errors.py  users.py
app/auth/: email.py  forms.py  routes.py
app/main/: forms.py  routes.py
app/templates/: 404.html  500.html  _post.html  base.html  bootstrap_wtf.html  edit_profile.html  index.html  login.html  reset_password.html  reset_password_request.html  user.html  user_popup.html
app/templates/email/: reset_password.html  (+1 more)
migrations/versions/: 1790529b1777_tasks.py  38fe605957ae_user_tokens.py  43f96fc2190d_add_language_to_posts.py  5041833e5b9c_posts_table.py  668e9a2d7b86_notifications.py  777a4f1a76c4_private_messages.py  d086f2c2bf64_users_table.py  f9bd7ac047bf_new_fields_in_user_model.py  fa10a57be402_followers.py
own_tests/: conftest.py
own_tests/functional/: test_chapter_1.py  test_chapter_10.py  test_chapter_16.py  test_chapter_2.py  test_chapter_3.py  test_chapter_5.py  test_chapter_6.py  test_chapter_9.py
own_tests/unit/: test_jwt_chapter_10.py  test_models_chapter_4.py  test_search_chapter_16.py  test_wtforms_chapter_3.py  test_wtforms_chapter_5.py  test_wtforms_chapter_6.py
tests/: conftest.py  test_chapter_1.py
tests/functional/: test_chapter_2.py  test_chapter_3.py  test_chapter_5.py  test_chapter_6.py
tests/unit/: test_wtforms_chapter_3.py  test_wtforms_chapter_5.py  test_wtforms_chapter_6.py
(+12 files in other folders)
